# kiwitalk-tauri

./: .eslintcache  README.md  package.json
.github/: dependabot.yml
public/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  cmd.rs  config.rs  main.rs
src-tauri/src/entity/: login.rs  mod.rs
src/components/common/: CheckBox.tsx  Input.tsx  kiwi.tsx
src/components/login/: LoginBackground.tsx  LoginForm.tsx  LoginTitle.tsx
src/pages/: Login.tsx
