[package]
name = "kiwitalk-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "kiwitalk-tauri"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.60"
serde = { version = "1.0.117", features = [ "derive" ] }
tauri = { version = "0.10", features = [ "event" ] }
ureq = { version = "1.5.2", features = [ "json" ] }
thiserror = "1.0.22"
openssl = "0.10.30"
hex = "0.4.2"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "kiwitalk-tauri"
path = "src/main.rs"
